@@ -63,6 +63,15 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<image>
+						<name>dasari508201/dear-comrade-spring-zero-to-hero</name>
+						<builder>bellsoft/buildpacks.builder:musl</builder>
+						<env>
+							<BP_JVM_VERSION>21</BP_JVM_VERSION>
+							<BP_JVM_JLINK_ENABLED>true</BP_JVM_JLINK_ENABLED>
+							<BP_JVM_JLINK_ARGS>--no-man-pages --no-header-files --strip-debug --compress=2 --add-modules java.base,java.logging,java.naming,java.desktop,jdk.unsupported</BP_JVM_JLINK_ARGS>
+						</env>
+					</image>
 				</configuration>
 			</plugin>
 		</plugins>
